<resources>
    <string name="app_name">Android_JjIot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open_wifi">打开网络</string>

    <!--更新App-->
    <string name="title_dialog">友情提示</string>
    <string name="message_permission_failed">尚未获取SD卡读取权限</string>
    <string name="message_permission_rationale">获取SD卡读取权限</string>
    <string name="btn_dialog_yes_permission">去设置</string>
    <string name="btn_dialog_no_permission">取消</string>
    <string name="message_setting_back">用户从设置回来了</string>
    <string name="message_post_succeed">获取SD卡权限成功</string>
    <string name="message_post_failed">获取SD卡权限失败</string>
    <string name="title_activity_login">登录</string>

    <!-- 登录 -->
    <string name="Switchover_host">切换主机</string>
    <string name="remember_password">忘记密码</string>
    <string name="user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="login_out">退出登录</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- 区域管理 -->
    <string name="area">区域</string>
    <!-- 设备管理 -->
    <string name="device_management">设备管理</string>
    <!-- 添加设备 -->
    <string name="add_device">添加设备</string>
    <!-- 添加zigbee -->
    <string name="add_zigbee">添加ZigBee设备</string>
    <string name="add_zigbee_tips">请在10秒内按一下新设备按钮</string>
    <!-- TV/AV -->
    <string name="television">TV/AV</string>
    <!-- 空调 -->
    <string name="add_telecontroller">添加虚拟遥控器</string>
    <string name="add_air_telecontroller">添加空调遥控器</string>
    <string name="air_conditioning">空调</string>
    <string name="shut_down">开机</string>

</resources>
